--- a/keeper/pyproject.toml
+++ b/keeper/pyproject.toml
@@ -90,6 +90,7 @@ ignore_missing_imports = true
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
 addopts = "-v --tb=short"
 
 # Coverage
